# awtk-web

./: .gitignore  Makefile  README.md  awtk.js  build.py  build_linux.sh  build_mac.sh  build_win32.bat  build_win32.sh  config_helper.py  create_project.py  env.sh  frames.html  helper.py  index.html  package.json  start_server.sh  start_web_debug.sh  tsconfig.json
api/: awtk_api.d.ts  awtk_api.js  awtk_api.ts  awtk_api_browser_prefix.js
app/: assets.c  demo_main.inc  label.c
build-scripts/: app_files.mk  awtk_web_files.mk  base_files.mk  window_animators_files.mk
configs/: export_app_funcs.json  export_awtk_funcs.json  export_funcs.json  export_runtime_funcs.json
data/: app.html  app_asm.html  app_js.html  index.html  simulator.html  update_res.py
docs/: TODO.md  changes.md  emsdk.md  get_started.md  get_started_c_3rd_lib.md  get_started_c_3rd_source.md  get_started_c_app.md  get_started_c_http.md  get_started_c_websocket.md  get_started_js_app.md  get_started_js_http.md  get_started_js_websocket.md  new_build.md  porting_notes_0.md  porting_notes_1.md  porting_notes_2.md  porting_notes_3.md  porting_notes_4.md  porting_notes_5.md
examples/AwtkApplicationC/: .sconsign.dblite  README.md  SConstruct  build.json
examples/AwtkApplicationC3rdLib/: .sconsign.dblite  README.md  SConstruct  build.json
examples/AwtkApplicationC3rdLib/3rd/foo/: CMakeLists.txt  README.md  SConscript  build.sh  foo.c
examples/AwtkApplicationC3rdSource/: .build.json.swp  .sconsign.dblite  README.md  build.json
examples/AwtkApplicationCAssets/: README.md  build.json
examples/AwtkApplicationCHttp/: .gitignore  (+4 more)
scripts/: update_res.py
web-project/: .gitignore  CMakeLists.txt  README.md  app.html  build.bat  build.sh  simulator.html  start_web.sh
web-project/api/: awtk_api.d.ts  awtk_api.js  awtk_api.js.map  awtk_api.ts  awtk_api_browser_appendix.js
web-project/awtk-port/c/: cond_var_null.c  dl_null.c  dummy.c  image_g2d.c  image_loader_web.c  image_loader_web.h  input_method_web.c  lcd_web.c  lcd_web.h  main.c  main_loop_web.c  main_loop_web.h  mutex_null.c  platform_web.c  semaphore_null.c  thread_null.c  vgcanvas_web.c
web-project/awtk-port/js/: assets_manager.js  awtk_wrap.js  browser.js  edit_element.js  events_source.js  image_cache.js  image_loader.js  input_method_web.js  key_event.js  main_loop_web.js  utils.js  vgcanvas_web.js  webgl2d.js
web-project/awtk-port/js/webgl2d/: CanvasRenderingContext2DWebGL.js  shader.js  shader_draw_image.js  shader_draw_primitives.js  typed_array_ext.js
web-project/configs/: export_awtk_funcs.json  export_awtk_web_funcs.json  export_runtime_funcs.json
web-project/js/: assets_web.js  awtk_asm.js  awtk_asm.wasm  awtk_web.js
web-project/tools/code_gen/: README.md  gen_c.js  gen_export.js
(+117 files in other folders)
